# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile
.cargo/: config.toml
config/: config.yml
entities/: Cargo.toml
entities/src/: lib.rs  mod.rs  subscription.rs  user.rs
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  subscription.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220915_084227_create_user_table.rs  m20220915_225007_add_index_to_user_email.rs
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/config/: config.yml
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
