# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entities", "migration"]

[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = { version = "0.11.11", features = ["json", "serde_json"] }
env_logger = "0.9.0"

[dependencies]
entities = {path = "entities"}
migration = {path = "migration"}
actix-web = "4.0.0"
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "mock"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
config = { version = "0.13.2", features = ["json", "json5", "toml", "yaml", "ini", "ron"] }
chrono = "0.4.22"
uuid = { version = "1.1.2", features = ["v4"] }
log = "0.4.0"
env_logger = "0.9.0"
