# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entities", "migration"]

[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = { version = "0.11.12", features = ["json", "serde_json"] }
env_logger = "0.9.1"
once_cell = "1.15.0"

[dependencies]
entities = {path = "entities"}
migration = {path = "migration"}
actix-web = "4.2.1"
sea-orm = { version = "0.9.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "mock"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = ">=1.18.4, <1.19.0", features = ["full"] }
config = { version = "0.13.2", features = ["json", "json5", "toml", "yaml", "ini", "ron"] }
chrono = "0.4.22"
#chrono = {git = "https://github.com/epipheus/chrono.git", branch = "main"}
uuid = { version = "1.2.1", features = ["v4"] }
log = "0.4.17"
env_logger = "0.9.1"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.1"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
